tweak header to avoid horizontal scrollbar

--- a/jack.css
+++ b/jack.css
@@ -15,16 +15,21 @@ div{
 }
 
 .amo_content{
-	border-left:2px solid rgb(59, 175, 218);
+	border-left:none;
+	z-index:1000;
 }
 
 .amo_github{
   		display:none;
 }
 .amo_menu_container{
-		margin-left:-15px;
-		margin-right:-15px;
+		background-color:#333;
 	}
+
+.amo_navbar{
+    	margin-left:-15px;
+    	margin-right:-15px;
+}
 
 .row{
 		margin:0;
@@ -50,6 +55,7 @@ div{
 	}
 
 	.amo_menu_container{
+		background-color:white;
 		margin-left:auto;
 		margin-right:auto;
 		width:100%;
@@ -61,7 +67,6 @@ div{
 
 	.navbar-header{
 		/*padding-left: 15px;*/
-		width:100%;
 	}
 
 	.navbar > .container .navbar-brand:hover{
@@ -71,6 +76,11 @@ div{
   	.amo_github{
   		display:inline;
   	}
+
+  	.amo_content{
+	border-left:2px solid rgb(59, 175, 218);
+	z-index:1000;
+	}
 
 }
 
